# axum-t5-embeddings

./: .gitignore  Cargo.toml  LICENSE  README.md  reference_server.py
src/: args.rs  main.rs
